--- a/css/style5.css
+++ b/css/style5.css
@@ -1,22 +1,17 @@
-body{
-    background-color: rgb(255, 182, 231);
+body {
+    background-color: rgb(195, 255, 187);
 }
 
-.header{
+.header {
     padding: 20px;
 }
 
-.links{
+.links {
     display: inline;
     margin-left: 480px;
 }
 
-.botoes{
-    display: inline;
-    margin-left: 480px;
-}
-
-.links a{
+.links a {
     margin-left: 15px;
     text-decoration: none;
     font-weight: bold;
@@ -24,85 +19,84 @@ body{
     padding: 3px;
 }
 
-.links a:hover{
-    color: #ffb5e3ea;
-    border-top: 2px solid #e605d3;
-    border-bottom: 2px solid #e605d3;
+.links a:hover {
+    color: #05e623;
+    border-top: 2px solid #05e623;
+    border-bottom: 2px solid #05e623;
 }
 
-.link-a-1{
-    background-color: #bb09ac;
-    border: #e605d3 solid 2px;
+.link-a-1 {
+    background-color: #09bb18;
+    border: #05e649 solid 2px;
     color: white;
     font-weight: bold;
-    padding: 10px;
 }
 
-.link-a-2{
+.link-a-2 {
     background-color: transparent;
-    border: #e605d3 solid 2px;
+    border: #05e649 solid 2px;
     font-weight: bold;
-    padding: 5px;
 }
 
 
-.span-1, .span-2{
+.span-1,
+.span-2 {
     font-weight: bold;
     font-size: x-large;
 }
 
-.span-1{
-    color:#85037a ;
+.span-1 {
+    color: #0e8503;
 }
 
-.span-2{
-    color: #e605d3;
+.span-2 {
+    color: #18e605;
 }
 
-.secao-1{
+.secao-1 {
     width: 500px;
     margin-left: 50px;
     margin-top: 50px;
-    padding: 10px;
 }
 
-.secao-2{
+.secao-2 {
     width: 500px;
-    margin-top:50px ;
+    margin-top: 50px;
     margin-bottom: 100px;
 }
 
-.secao-3{
-    width: 500px;
+.secao-3 {
+    width: 600px;
     margin-left: 50px;
     margin-top: 50px;
 }
 
-.secao-4{
-    width: 500px;
+.secao-4 {
+    width: 600px;
     margin-left: 50px;
     margin-top: 50px;
 }
 
-.secao-1 h1{
+.secao-1 h1 {
     font-weight: bold;
 }
 
-.secao-1 h2{
+.secao-1 h2 {
     font-weight: lighter;
-    color: #e605d3;
+    color: #05e623;
 }
 
-img{
-    width: 500px;
+img {
+    width: 400px;
     margin: 0 auto;
 }
-.img img{
+
+.img img {
     width: 70%;
     border-radius: 100%;
 }
 
-.img-col{
+.img-col {
     width: 20%;
     border-radius: 100%;
 }
