--- a/css/stylenovo.css
+++ b/css/stylenovo.css
@@ -97,6 +97,17 @@ h2{
     margin-top: 20px;
 }
 
+.secao-2 h2{
+    font-weight: lighter;
+    color: #e605d3;
+    margin-top: 10px;
+}
+
+.linha-divisoria{
+    width: 0.5%;
+    background-color:#05e623;
+}
+
 .secao-1{
     width: 100%;
     margin-left: 0;
